Increased maximum permanent generation size for widgetset compiler.
git-svn-id: https://dev.vaadin.com/svn/integration/eclipse@11282 de684a11-831f-0410-ab27-cb86445eb682